@@ -69,7 +69,7 @@
           Load 15</a>
       </div>
       <div class="cr-panel-block__chart">
-        <nvd3 id="cluster-load" on-ready="callback" api="api" options="options" data="chart.data"></nvd3>
+        <nvd3 id="cluster-load" api="api" options="options" data="chart.data" config="config"></nvd3>
       </div>
     </div>
 
